# FlockingWorker

./: README.md
project/: BuildConfiguration.scala
schema/demoteam/: flock.proto  flock_output.proto  flock_stats.proto  transform.proto
workers/flocking/: CMakeLists.txt  build.json  flocking.sln  generate.sh  setupForLinux.bat  setupForWindows.bat
workers/flocking/WorkerSdk/: README.md
workers/flocking/flocking/: Maths.cpp  Maths.h  ReadMe.txt  flocking.cpp  flocking.h  flocking.vcxproj  geometry.cpp  geometry.h
workers/gsim/src/main/resources/parameters/: parameters.txt
workers/gsim/src/main/scala/behaviours/agent/: FlockBehaviour.scala  FlockGsimBehaviour.scala  FlockStatsBehaviour.scala
workers/gsim/src/main/scala/behaviours/controls/: PlayerBehaviour.scala
workers/gsim/src/main/scala/demoteam/buildingdemo/launcher/: ClientBridgeSettings.scala  FlockingWorkerBridgeSettings.scala  FlockingWorkerConstraint.scala  FlockingWorkerConstraintToEngineDescriptorResolver.scala  FlockingWorkerDescriptor.scala  SimulationLaunchConfig.scala
workers/gsim/src/main/scala/improbable/apps/: BuildingDemoWorldAppList.scala  FlockingStats.scala  PlayerLifeCycleManager.scala  Respawner.scala
workers/gsim/src/main/scala/templates/: BirdNature.scala  Parameters.scala  PlayerNature.scala
workers/unity/: build.json  spatialos_worker_packages.json
workers/unity/Assets/: Bootstrap.cs  ClientScene.unity  PhysicsServerScene.unity
workers/unity/Assets/Gamelogic/Visualizers/: ClientPositionVisualizer.cs  DemoPositionVisualizer.cs  PlayerControlsVisualizer.cs
workers/unity/Assets/Materials/: Ground.mat
workers/unity/Assets/Resources/EntityPrefabs/: Bird.prefab  Player@Player.prefab
workers/unity/ProjectSettings/: ProjectSettings.asset
